# SpinParser

./: .gitignore  Assert_8hpp__dep__incl.map  Assert_8hpp__incl.md5  CITATION.md  CMakeLists.txt  CommandLineOptions_8hpp.html  CommandLineOptions_8hpp_source.html  CutoffDiscretization_8hpp.html  CutoffDiscretization_8hpp__dep__incl.md5  CutoffDiscretization_8hpp__incl.map  CutoffDiscretization_8hpp__incl.md5  EffectiveAction_8hpp.html  EffectiveAction_8hpp__dep__incl.map  EffectiveAction_8hpp__dep__incl.md5  EffectiveAction_8hpp__incl.map  EffectiveAction_8hpp__incl.md5  Exception_8hpp.html  Exception_8hpp__dep__incl.md5  FrequencyDiscretization_8hpp__incl.md5  FrgCommon_8cpp__incl.map  FrgCommon_8hpp.html  FrgCommon_8hpp__dep__incl.map  FrgCommon_8hpp__incl.map  FrgCommon_8hpp__incl.md5  FrgCoreFactory_8cpp.html  FrgCoreFactory_8cpp__incl.map  FrgCoreFactory_8cpp__incl.md5  FrgCoreFactory_8hpp.html  FrgCoreFactory_8hpp__dep__incl.map  FrgCoreFactory_8hpp__dep__incl.md5  FrgCoreFactory_8hpp__incl.map  FrgCoreFactory_8hpp__incl.md5  FrgCoreFactory_8hpp_source.html  FrgCore_8hpp__dep__incl.md5  FrgCore_8hpp__incl.map  FrgCore_8hpp_source.html  Geometry_8hpp.html  Geometry_8hpp_source.html  InputParser_8hpp.html  InputParser_8hpp__incl.md5  (+257 more)
.github/workflows/: build.yml  deploy.yml  test.yml
doc/: CMakeLists.txt  mainpage.md
doc-dev/: Assert_8hpp.html  Assert_8hpp__dep__incl.md5  Assert_8hpp__incl.map  Assert_8hpp_source.html  CommandLineOptions_8cpp.html  CommandLineOptions_8cpp__incl.map  CommandLineOptions_8cpp__incl.md5  CommandLineOptions_8hpp__dep__incl.map  CommandLineOptions_8hpp__dep__incl.md5  CommandLineOptions_8hpp__incl.map  CommandLineOptions_8hpp__incl.md5  CommandLineOptions_8hpp_source.html  CutoffDiscretization_8hpp__dep__incl.map  CutoffDiscretization_8hpp_source.html  EffectiveAction_8hpp_source.html  Exception_8hpp__dep__incl.map  Exception_8hpp__incl.map  Exception_8hpp__incl.md5  Exception_8hpp_source.html  FrequencyDiscretization_8hpp.html  FrequencyDiscretization_8hpp__dep__incl.map  FrequencyDiscretization_8hpp__dep__incl.md5  FrequencyDiscretization_8hpp__incl.map  FrequencyDiscretization_8hpp_source.html  FrgCommon_8cpp.html  FrgCommon_8cpp__incl.md5  FrgCommon_8hpp__dep__incl.md5  FrgCommon_8hpp_source.html  FrgCore_8hpp.html  FrgCore_8hpp__dep__incl.map  FrgCore_8hpp__incl.md5  Geometry_8hpp.html  Geometry_8hpp__dep__incl.map  Geometry_8hpp__dep__incl.md5  Geometry_8hpp__incl.map  Geometry_8hpp__incl.md5  InputParser_8hpp__dep__incl.map  InputParser_8hpp__dep__incl.md5  InputParser_8hpp__incl.map  Integrator_8hpp.html  (+288 more)
doc-dev/search/: all_0.js  all_1.js  all_11.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_3.js  all_4.js  all_b.js  all_d.js  all_f.js  classes_0.js  classes_4.js  classes_5.js  defines_0.js  defines_1.js  enums_2.js  enumvalues_1.js  enumvalues_2.js  enumvalues_7.js  enumvalues_9.js  enumvalues_c.js  enumvalues_d.js  enumvalues_e.js  files_1.js  files_3.js  files_4.js  files_6.js  files_7.js  files_8.js  functions_0.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_a.js  functions_b.js  functions_d.js  (+20 more)
doc-python/: index.html  ldf.html  obs.html
doc/doc-dev/: CMakeLists.txt  mainpage.md
doc/doc-index/: CMakeLists.txt
doc/doc-python/: CMakeLists.txt
examples/: cubic-J1J2.xml  kagome-DM.xml  square-Heisenberg.xml  squarelattice-AFM.xml
opt/mathematica/: spinparser.m
opt/python/spinparser/: __init__.py  ldf.py  obs.py
res/: lattices.xml  models-kitaev.xml  models-various.xml  models.xml
search/: all_10.js  all_12.js  all_13.js  all_2.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_c.js  all_e.js  classes_1.js  classes_2.js  classes_3.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  defines_2.js  enums_0.js  enums_1.js  enums_3.js  enums_4.js  enums_5.js  enumvalues_0.js  enumvalues_10.js  enumvalues_11.js  enumvalues_12.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  enumvalues_8.js  enumvalues_a.js  enumvalues_b.js  enumvalues_f.js  files_0.js  files_2.js  files_5.js  (+28 more)
src/: CMakeLists.txt  CommandLineOptions.cpp  CommandLineOptions.hpp  CutoffDiscretization.hpp  EffectiveAction.hpp  FrequencyDiscretization.hpp  FrgCommon.cpp  FrgCommon.hpp  FrgCore.hpp  FrgCoreFactory.cpp  FrgCoreFactory.hpp  Lattice.hpp  LatticeModelFactory.cpp  LatticeModelFactory.hpp  Measurement.cpp  Measurement.hpp  SpinModel.hpp  SpinParser.cpp  SpinParser.hpp  TaskFileParser.cpp  TaskFileParser.hpp  main.cpp
src/SU2/: SU2EffectiveAction.hpp  SU2FrgCore.cpp  SU2FrgCore.hpp  SU2MeasurementCorrelation.cpp  SU2MeasurementCorrelation.hpp  SU2VertexSingleParticle.hpp  SU2VertexTwoParticle.hpp
src/TRI/: TRIEffectiveAction.hpp  TRIFrgCore.cpp  TRIFrgCore.hpp  TRIMeasurementCorrelation.cpp  TRIMeasurementCorrelation.hpp  TRIVertexSingleParticle.hpp  TRIVertexTwoParticle.hpp
src/XYZ/: XYZEffectiveAction.hpp  XYZFrgCore.cpp  XYZFrgCore.hpp  XYZMeasurementCorrelation.cpp  XYZMeasurementCorrelation.hpp  XYZVertexSingleParticle.hpp  XYZVertexTwoParticle.hpp
src/lib/: Assert.hpp  Exception.hpp  Geometry.hpp  InputParser.hpp  Integrator.hpp  LoadManager.hpp  Log.cpp  Log.hpp  Timestamp.hpp  ValueBundle.hpp
test/: CMakeLists.txt  test_CutoffDiscretization.cpp  test_FrequencyDiscretization.cpp  test_Geometry.cpp  test_InputParser.cpp  test_Integrator.cpp  test_Lattice.cpp  test_LoadManager.cpp  test_SU2VertexSingleParticle.cpp  test_SU2VertexTwoParticle.cpp  test_TRIVertexSingleParticle.cpp  test_TRIVertexTwoParticle.cpp  test_ValueBundle.cpp  test_XYZVertexSingleParticle.cpp  test_XYZVertexTwoParticle.cpp
test/scripted/: test_MPI.sh  test_checkpoint.sh  test_defer.sh  test_pythonObs.sh  test_reference1.sh  test_reference2.sh  test_reference3.sh  test_referenceFail.sh
test/scripted/assets/: test_eval.py  test_python_obs.py  test_reference2.ref  test_reference3.ref  test_referenceFail.ref
