find_package(Doxygen REQUIRED dot)

set(DOXYGEN_MACRO_EXPANSION YES)
set(DOXYGEN_FILE_PATTERNS *.cpp *.hpp)
set(DOXYGEN_QUIET YES)
set(DOXYGEN_WARN_IF_UNDOCUMENTED NO)
set(DOXYGEN_WARN_IF_DOC_ERROR NO)
set(DOXYGEN_WARN_NO_PARAMDOC NO)

file(GLOB_RECURSE DOCUMENTATION_INPUT_FILES ${PROJECT_SOURCE_DIR}/src/*.[hc]pp)
doxygen_add_docs(${CMAKE_PROJECT_NAME}Documentation ${DOCUMENTATION_INPUT_FILES} USE_STAMP_FILE ALL)
install(DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/html/ DESTINATION doc)